--- a/style.css
+++ b/style.css
@@ -2,4 +2,37 @@
     padding: 0;
     margin: 0;
 }
+body{
+    height: 100%;
+    width: 100%;
+    background-color: #212121;
+}
 
+.parent{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 100px;
+}
+
+.red, .white, .blue, .yellow{
+    height: 100px;
+    width: 100px;
+    border: 3px solid black;
+}
+
+.red{
+    background-color: red;
+}
+.white{
+    background-color: white;
+}
+.blue{
+    background-color: blue;
+}
+.yellow{
+    background-color: yellow;
+}
