--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@ body{
     background-color: #212121;
 }
 
+.heading{
+    display: flex;
+    justify-content: center;
+}
+
+h1{
+    color: white;
+    position: absolute;
+    margin-top: 10px;
+}
+
 .parent{
     height: 100%;
     width: 100%;
@@ -15,24 +26,24 @@ body{
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 
-.red, .white, .blue, .yellow{
+.button{
     height: 100px;
     width: 100px;
     border: 3px solid black;
 }
 
-.red{
+#red{
     background-color: red;
 }
-.white{
+#white{
     background-color: white;
 }
-.blue{
+#blue{
     background-color: blue;
 }
-.yellow{
+#yellow{
     background-color: yellow;
 }
